--- a/global.css
+++ b/global.css
@@ -1,6 +1,8 @@
 /* 모든 페이지에 적용되는 foundation CSS. */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
-@import 'tailwindcss';
+
+@import "tailwindcss";
+
+@custom-variant dark (&:is(.dark *));
 
 @theme {
   --color-gold-999: #ffa300; /* 실험용 변수 */
@@ -63,21 +65,12 @@
 
 @layer utilities {
   .font-regular {
-    font-family: 'Pretendard', sans-serif;
+    font-family: "Pretendard", sans-serif;
   }
 
   .font-bold {
-    font-family: 'Pretendard', sans-serif;
+    font-family: "Pretendard", sans-serif;
     font-weight: bold;
   }
-
-  .poppins-regular {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-  }
-
-  .poppins-bold {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-  }
 }
+
