--- a/global.css
+++ b/global.css
@@ -1,6 +1,6 @@
 /* 모든 페이지에 적용되는 foundation CSS. */
-
-@import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import 'tailwindcss';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -65,11 +65,11 @@
 
 @layer utilities {
   .font-regular {
-    font-family: "Pretendard", sans-serif;
+    font-family: 'Pretendard', sans-serif;
   }
 
   .font-bold {
-    font-family: "Pretendard", sans-serif;
+    font-family: 'Pretendard', sans-serif;
     font-weight: bold;
   }
 
@@ -87,4 +87,3 @@
     border-radius: 100px;
   }
 }
-
